microservices/keycloak/istio-oidc-authservice/oauth2-proxy/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: oauth2-proxy
spec:
  hosts:
  - "*"
  gateways:
  - default/shared-gateway
  http:
  - match:
    - uri:
        prefix: /oauth2
    route:
    - destination:
        port:
          number: 8080
        host: authservice.istio-system.svc.cluster.local
